--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "axios": "^1.7.2",
+    "gomarketme-react-native": "^1.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-device-info": "^11.1.0",
+    "react-native-iap": "^12.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
