--- a/package.json
+++ b/package.json
@@ -10,33 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "axios": "^1.7.2",
-    "gomarketme-react-native": "^1.0.0",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-device-info": "^11.1.0",
-    "react-native-iap": "^12.15.1"
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "axios": "^0.21.1",
+    "get-user-locale": "^2.3.2",
+    "gomarketme-react-native": "^1.1.0",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-device-info": "^14.0.0",
+    "react-native-iap": "^7.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.85",
-    "@react-native/eslint-config": "0.74.85",
-    "@react-native/metro-config": "0.74.85",
-    "@react-native/typescript-config": "0.74.85",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "latest",
+    "@react-native-community/cli-platform-android": "15.0.0",
+    "@react-native-community/cli-platform-ios": "15.0.0",
+    "@react-native/babel-preset": "0.76.1",
+    "@react-native/eslint-config": "0.76.1",
+    "@react-native/metro-config": "0.76.1",
+    "@react-native/typescript-config": "0.76.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "yarn@3.6.4"
+  }
 }
