--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,11 @@ yarn-error.log
 
 # misc
 ios/Pods.zip
+
+# macOS system files
+.DS_Store
+
+# Xcode user-specific data
+**/xcuserdata/*
+**/*.xcworkspace/xcuserdata/*
+
